--- a/.github/workflows/Proj_feedback.yml
+++ b/.github/workflows/Proj_feedback.yml
@@ -1,22 +1,44 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Proj_feedback
+
 on:
   push:
     branches:
     - main
+    paths:
+    - exercises/**
+
 jobs:
-  Explore-GitHub-Actions:
+  exercise-feedback:
     runs-on: ubuntu-latest
-    
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        path: main
+
+    - name: Checkout exercise feedback
+      uses: actions/checkout@v3
+      with:
+        repository: jvalue/amse-exercise-feedback
+        path: grading
+
+    - name: Set up Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 'lts/*'
+
+    # Install jayvee
+    - name: Set up Jayvee
+      run: |
+        ./grading/ci/setup_jayvee.sh
+
+    # Install python
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+
+    # Run exercise feedback
+    - name: Exercise feedback
+      run: |
+        ./grading/ci/run_grading.sh
