--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -18,7 +18,7 @@ jobs:
         path: main
 
     
-    - name: Setting up Node
+    - name: Set up Node
       uses: actions/setup-node@v3
       with:
         node-version: 'lts/*'
