Update  Proj_feedback.yml

--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -36,4 +36,6 @@ jobs:
     # Run project feedback
     - name: Project feedback
       run: |
-        ./project/tests.sh
+        chmod u+r+x ./main/project/test.sh
+        cd ./main/project
+        ./test.sh
