Update  Proj_feedback.yml

--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -36,6 +36,4 @@ jobs:
     # Run project feedback
     - name: Project feedback
       run: |
-        chmod u+r+x ./main/project/test.sh
-        cd ./main/project
-        ./test.sh
+         ./project/ci/tests.sh
