Update  Proj_feedback.yml

--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -1,4 +1,4 @@
-name: Automated Dataset Testing
+name: Project feedback
 
 on:
   push:
@@ -25,12 +25,7 @@ jobs:
       with:
         python-version: 3.11
 
-       # Run exercise feedback
-    - name: Install dependencies
-      run: |
-        echo "loading requirements"
-        pip install -r ./main/project/requirements.txt 
-
+    
     # Run exercise feedback
     - name: Exercise feedback
       run: |
