--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -1,34 +1,38 @@
-name: Project feedback
+name: Proj_feedback
 
 on:
   push:
     branches:
     - main
+    
 
 jobs:
-  exercise-feedback:
+  Project-feedback:
     runs-on: ubuntu-latest
     steps:
+    
     - name: Checkout
       uses: actions/checkout@v3
       with:
         path: main
 
+    
     - name: Set up Node
       uses: actions/setup-node@v3
       with:
         node-version: 'lts/*'
+
+    
 
     # Install python
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
         python-version: 3.11
-
     
-    # Run exercise feedback
-    - name: Exercise feedback
+
+
+    # Run project feedback
+    - name: Project feedback
       run: |
-        chmod u+r+x ./main/project/test.sh
-        cd ./main/project
-        ./test.sh
+         ./project/ci/tests.sh
