Update  Proj_feedback.yml

--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -35,4 +35,4 @@ jobs:
     # Run project feedback
     - name: Project feedback
       run: |
-         ./project/ci/tests.sh
+         ./main/project/tests.sh
