--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   Project-feedback:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,13 +20,25 @@ jobs:
         with:
           node-version: 'lts/*'
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.11
+          python-version: '3.x'  # Specify the desired Python version
+
+      - name: Install dependencies
+        run: |
+          cd main/project
+          pip install -r requirements.txt  # Install project dependencies
 
       - name: Project feedback
         run: |
           cd main/project
-          chmod +x tests.sh
-          ./tests.sh
+          python3 AutoPipeLine.py
+          data_files="Bicycle_data.sqlite"
+          if [ -f "$data_files" ]; then
+            echo "Yes! Output file $data_files is available."
+          else
+            echo "No! Output file $data_files is not available."
+          fi
+          echo "Test if pipeline works correctly"
+          pytest ./data/unitTest.py
