--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -23,13 +23,10 @@ jobs:
         with:
          python-version: 3.11
 
-      - name: Install dependencies
-        run: |
-          cd main/project
-          pip install -r requirements.txt  # Install project dependencies
+      
 
-# Run exercise feedback
-      - name: Exercise feedback
+# Run CI
+      - name: Continuous Integration
         run: |
          chmod u+r+x ./main/project/tests.sh
          cd ./main/project
