Update  Proj_feedback.yml

--- a/.github/workflows/ Proj_feedback.yml
+++ b/.github/workflows/ Proj_feedback.yml
@@ -16,7 +16,7 @@ jobs:
 
       
 
-      # Install python
+      # Install python!
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
